# dino-but-smart

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dino_but_smart/: __init__.py  agent.py  bridge.py  chrome_env.py  constants.py  env.py  eval_real.py  play.py  train.py  train_chrome.py
tests/: test_agent.py  test_env.py
