[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dino-but-smart"
version = "0.1.0"
description = "DQN agent that learns to play the Chrome Dino game"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pygame>=2.5",
    "selenium>=4.15",
    "webdriver-manager>=4.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
